--- a/css/econometrics.css
+++ b/css/econometrics.css
@@ -5,6 +5,7 @@ table{margin:auto;}
 select{margin: 0 auto; display: block; padding:5px;}
 h1, h2, h3, h4, td{color: #f5f5f5;text-align: center;}
 h4{margin: 0;}
+span{border-top: 1px solid #f5f5f5;}
 .buttons{width: 100%; display: inline-block; text-align: center; padding-top:10px;}    
 .calc, .select-trend, .generate{width: 100%; float:left; display:block;}
 .calc{padding-top:15px;}
