--- a/css/econometrics.css
+++ b/css/econometrics.css
@@ -1,6 +1,7 @@
 html{width: 100%;}
 body{width: 100%; background-color: #383838; margin: 0;}
 main{width: 100%; display: table; margin: auto; padding: 0px 4px 20px 4px;}
+input{text-align: center;}
 table{margin:auto;}
 select{margin: 0 auto; display: block; padding:5px;}
 h1, h2, h3, h4, td{color: #f5f5f5;text-align: center;}
