--- a/css/econometrics.css
+++ b/css/econometrics.css
@@ -7,6 +7,7 @@ input{text-align: center; height: 29px; width: 122px; font-size: 18px;}
 input[type=number]::-webkit-inner-spin-button, input[type=number]::-webkit-outer-spin-button {-webkit-appearance: none;-moz-appearance: none;appearance: none;margin: 0;}
 input[type=number]{-moz-appearance: textfield;}
 select{margin: 0 auto; display: block; padding:5px; font-size: 16px;}
+#select-round{height: 40px; width: 50px; font-size: 18px;}
 h1, h2, h3, h4, td{color: #f5f5f5;text-align: center;}
 h4{margin: 0;}
 span{border-top: 1px solid #f5f5f5;}
