--- a/css/econometrics.css
+++ b/css/econometrics.css
@@ -13,7 +13,7 @@ h4{margin: 0;}
 span{border-top: 1px solid #f5f5f5;}
 .buttons{width: 100%; display: inline-block; text-align: center; padding-top:10px;}    
 .calc, .select-trend, .generate{width: 100%; float:left; display:block;}
-.calc{padding-top:15px;}
+.calc{padding-top:15px;text-align: center;display: inline-block;}
 .button-addtr, .button-removetr{margin: 0 auto; display: inline-block; height:48px; width:48px; font-size:30px; border-radius:50%;}
-.button-calc{margin: 0 auto; display: block; font-size:20px; padding:6px;}
+.button-calc, .button-ggs{margin: 0 auto; display: inline-block; font-size:20px; padding:6px;}
 .generate-table td{background-color: #848484; padding: 5px 10px 5px 10px;}
