--- a/css/econometrics.css
+++ b/css/econometrics.css
@@ -1,6 +1,6 @@
 html{width: 100%;}
 body{width: 100%; background-color: #383838; margin: 0;}
-main{width: 100%; display: table; margin: auto; padding: 0px 4px 20px 4px;}
+main{display: table; margin: auto; padding: 0px 4px 20px 4px;}
 table{margin:auto;}
 #table{border-spacing: 4px;}
 input{text-align: center; height: 29px; width: 122px; font-size: 18px;}
@@ -8,7 +8,7 @@ input[type=number]::-webkit-inner-spin-button, input[type=number]::-webkit-outer
 input[type=number]{-moz-appearance: textfield;}
 select{margin: 0 auto; display: block; padding:5px; font-size: 16px;}
 #select-round{height: 40px; width: 50px; font-size: 18px;}
-h1, h2, h3, h4, td{color: #f5f5f5;text-align: center;}
+h1, h2, h3, h4, td, a{color: #f5f5f5;text-align: center;}
 h4{margin: 0;}
 span{border-top: 1px solid #f5f5f5;}
 .buttons{width: 100%; display: inline-block; text-align: center; padding-top:10px;}    
@@ -17,3 +17,6 @@ span{border-top: 1px solid #f5f5f5;}
 .button-addtr, .button-removetr{margin: 0 auto; display: inline-block; height:48px; width:48px; font-size:30px; border-radius:50%;}
 .button-calc, .button-ggs{margin: 0 auto; display: inline-block; font-size:20px; padding:6px;}
 .generate-table td{background-color: #848484; padding: 5px 10px 5px 10px;}
+
+.selectLang{text-align: center; white-space: pre-line;}
+img{width: 250px; height: 125px;padding-top: 8px;}
